--- a/index.html
+++ b/index.html
@@ -3,145 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      @font-face {
-        font-family: Montserrat;
-        font-weight: normal;
-        src: url("/fonts/Montserrat-Regular.otf");
-      }
 
-      :root {
-        --mainColor: #000;
-        --shadowColor: #fff;
-      }
-
-      body {
-        margin: 0;
-        background-color: #414141;
-        overflow: hidden;
-
-        display: flex;
-        width: 100vw;
-        height: 100vh;
-        justify-content: flex-start;
-        align-items: stretch;
-        flex-direction: column;
-      }
-
-      .blur {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-        backdrop-filter: saturate(180%) blur(20px);
-        z-index: 1000;
-      }
-
-      .shadow {
-        position: fixed;
-        z-index: 1001;
-        top: 4%;
-        left: 2%;
-        min-width: 100%;
-        min-height: 100%;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) inset;
-      }
-
-      #backgroundImage {
-        width: inherit;
-        height: inherit;
-        -o-filter: blur(15px);
-        filter: blur(15px) brightness(80%);
-        object-fit: cover;
-        transform: scale(1.06); /* scale up to hide the edge blur */
-        width: 110%;
-        height: 110%;
-        object-fit: cover;
-        position: absolute;
-        left: -2.5%;
-        top: -2.5%;
-        z-index: -10;
-      }
-
-      #backgroundImageFade {
-        width: inherit;
-        height: inherit;
-        -o-filter: blur(15px);
-        filter: blur(15px) brightness(80%);
-        object-fit: cover;
-        transform: scale(1.06); /* scale up to hide the edge blur */
-        width: 110%;
-        height: 110%;
-        object-fit: cover;
-        position: absolute;
-        left: -2.5%;
-        top: -2.5%;
-        z-index: -9;
-      }
-      canvas {
-        position: absolute;
-        top: 1%;
-        height: 30%;
-      }
-      .center {
-        text-align: center;
-        z-index: 1;
-      }
-      .center span {
-        height: 0;
-        display: block;
-      }
-
-      #albumart {
-        border: solid 1px rgb(0 0 0 / 50%);
-        width: 200px;
-        height: 200px;
-        box-shadow: 3px 3px 18px var(--shadowColor);
-        border-radius: 50%;
-      }
-
-      div {
-        padding: 10px;
-      }
-      .top{
-        top: 1%;
-        height: 30%;
-      }
-      .bl {
-        position: absolute;
-        top: 30%;
-        left: 0;
-        right: 50%;
-        bottom: 0;
-
-      }
-      .br {
-        position: absolute;
-        top: 30%;
-        left: 50%;
-        right: 0;
-        bottom: 0;
-
-      }
-      #music-info {
-        position: absolute;
-
-      }
-
-      h1 {
-        font-family: Montserrat;
-        margin: 0;
-        color: var(--mainColor);
-        text-shadow: 1px 0px 10px var(--shadowColor);
-      }
-
-      h2 {
-        font-family: Montserrat;
-        color: var(--mainColor);
-        text-shadow: 1px 0px 10px var(--shadowColor);
-      }
-    </style>
     <script src="js/color-thief.umd.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/script.js" defer></script>
@@ -162,10 +24,154 @@
       </div>
     </div>
     <div class="bl">
-      <iframe src="https://tasks.google.com/embed/list/~default" title="Google Tasks" id="tasks-frame"></iframe>
+      <iframe src="https://tasksboard.com/app" title="Google Tasks" id="tasks-frame" width="100%" height="100%"></iframe>
+      <!--         https://assistant.google.com/tasks                                                        -->
     </div>
-    <div class="br">
-      <iframe src="https://calendar.google.com/calendar/u/0/r" title="Google Calender" id="calender-frame"></iframe>
+    <div class="br" id="calender">
+
+<!--      <iframe src="https://calendar.google.com/calendar/embed?src=paulwrath123%40gmail.com&ctz=America%2FLos_Angeles"-->
+<!--              style="border:solid 1px #777" width="100%" height="100%"></iframe>              -->
+<!--              https://calendar.google.com/calendar/embed?height=1000&wkst=1&bgcolor=%231f2024&ctz=America%2FLos_Angeles&showPrint=0&src=cGF1bHdyYXRoMTIzQGdtYWlsLmNvbQ&src=ODRlZTl2b3VqNDhrNWkxMmJ2ajVuaWlkcGo0M2pyMmhAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%2300ff00&color=%23ff0000&color=%230000ff-->
+
     </div>
   </body>
+  <style>
+    @font-face {
+      font-family: Montserrat;
+      font-weight: normal;
+      src: url("/fonts/Montserrat-Regular.otf");
+    }
+
+    :root {
+      --mainColor: #000;
+      --shadowColor: #fff;
+    }
+
+    body {
+      margin: 0;
+      background-color: #414141;
+      overflow: hidden;
+
+      display: flex;
+      width: 100vw;
+      height: 100vh;
+      justify-content: flex-start;
+      align-items: stretch;
+      flex-direction: column;
+    }
+
+    .blur {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      backdrop-filter: saturate(180%) blur(20px);
+      z-index: 1000;
+    }
+
+    .shadow {
+      position: fixed;
+      z-index: 1001;
+      top: 4%;
+      left: 2%;
+      min-width: 100%;
+      min-height: 100%;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5) inset;
+    }
+
+    #backgroundImage {
+      width: inherit;
+      height: inherit;
+      -o-filter: blur(15px);
+      filter: blur(15px) brightness(80%);
+      object-fit: cover;
+      transform: scale(1.06); /* scale up to hide the edge blur */
+      width: 110%;
+      height: 110%;
+      object-fit: cover;
+      position: absolute;
+      left: -2.5%;
+      top: -2.5%;
+      z-index: -10;
+    }
+
+    #backgroundImageFade {
+      width: inherit;
+      height: inherit;
+      -o-filter: blur(15px);
+      filter: blur(15px) brightness(80%);
+      object-fit: cover;
+      transform: scale(1.06); /* scale up to hide the edge blur */
+      width: 110%;
+      height: 110%;
+      object-fit: cover;
+      position: absolute;
+      left: -2.5%;
+      top: -2.5%;
+      z-index: -9;
+    }
+    canvas {
+      position: absolute;
+      top: 1%;
+      height: 30%;
+    }
+    .center {
+      text-align: center;
+      z-index: 1;
+    }
+    .center span {
+      height: 0;
+      display: block;
+    }
+
+    #albumart {
+      border: solid 1px rgb(0 0 0 / 50%);
+      width: 200px;
+      height: 200px;
+      box-shadow: 3px 3px 18px var(--shadowColor);
+      border-radius: 50%;
+    }
+
+    div {
+      padding: 10px;
+    }
+    .top{
+      top: 5%;
+      height: 25%;
+    }
+    .bl {
+      position: absolute;
+      top: 30%;
+      left: 0;
+      right: 50%;
+      bottom: 0;
+
+    }
+    .br {
+      position: absolute;
+      top: 30%;
+      left: 50%;
+      right: 0;
+      bottom: 0;
+
+    }
+    #music-info {
+      position: absolute;
+
+    }
+
+    h1 {
+      font-family: Montserrat;
+      margin: 0;
+      color: var(--mainColor);
+      text-shadow: 1px 0px 10px var(--shadowColor);
+    }
+
+    h2 {
+      font-family: Montserrat;
+      color: var(--mainColor);
+      text-shadow: 1px 0px 10px var(--shadowColor);
+    }
+  </style>
 </html>
